# Project_HPC

./: .gitignore  README.md  Visu_trajectory.ipynb  plots.ipynb
Sequential_CPU/: CMakeLists.txt  Visu_trajectory.ipynb  barnesHut.cpp  barnesHut.hpp  main.cpp  script.sh
Sequential_CPU/Barnes_Sequential/: Barnes_Sequential.amplxeproj
Sequential_CPU/Barnes_Sequential/r000hs/: with_pow_4096.amplxe
Sequential_CPU/Barnes_Sequential/r000hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
Sequential_CPU/Barnes_Sequential/r000hs/data.0/: 12093-12098.0-12098.0.th  12093-12098.0-12098.0.th.aux  12093-12098.0.trace  systemcollector-12093-ubuntuzer.sc
Sequential_CPU/Barnes_Sequential/r000hs/sqlite-db/: dicer.db
Sequential_CPU/Barnes_Sequential/r001hs/: 1024part.amplxe  opti_4096_05.amplxe  without_pow_4096.amplxe
Sequential_CPU/Barnes_Sequential/r001hs/config/: context_values.cfg  log.cfg  runss.options
Sequential_CPU/Barnes_Sequential/r001hs/data.0/: 12726-12731.0-12731.0.th  12726-12731.0-12731.0.th.aux  12726-12731.0.trace  14899-14904.0-14904.0.th  14899-14904.0-14904.0.th.aux  14899-14904.0.trace  8691-8696.0-8696.0.th  8691-8696.0-8696.0.th.aux  8691-8696.0.trace  (+3 more)
Sequential_CPU/Barnes_Sequential/r002hs/: 4096part.amplxe  opti_16384_05.amplxe  without_pow_65536.amplxe
Sequential_CPU/Barnes_Sequential/r003hs/: 16384part.amplxe  opti_65536_05.amplxe  without_pow_524288.amplxe
Sequential_CPU/Barnes_Sequential/r004hs/: 65536part.amplxe  opti_262144_05.amplxe
Sequential_CPU/Barnes_Sequential/r005hs/: 262144part.amplxe  opti_65536_02.amplxe
(+192 files in other folders)
